--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,3 @@
-
 name: Demo of build an deploy
 
 on:
@@ -6,12 +5,26 @@ on:
     branches: [main, dev]
   workflow_dispatch:
 
- jobs:
-   build:
-     runs-on: 'ubuntu-latest'
-     steps:
-       - run: |
-           echo 'hello'
+jobs:
+  build:
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-             
+      - name: Install .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
 
+      - name: Build and Publish
+        run: dotnet restore
+          dotnet build --no-restore
+          dotnet test
+          dotnet publish -c Release -o ./out
+
+      - name: Upload to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          name: app
+          path: ./out
