--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,7 +18,8 @@ jobs:
           dotnet-version: "6.0.x"
 
       - name: Build and Publish
-        run: dotnet restore
+        run: |
+          dotnet restore
           dotnet build --no-restore
           dotnet test
           dotnet publish -c Release -o ./out
