--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,6 +5,9 @@ on:
     branches: [main, dev]
   workflow_dispatch:
 
+env:
+  APP_NAME: "gh-fudge"
+
 jobs:
   build:
     runs-on: "ubuntu-latest"
@@ -29,3 +32,25 @@ jobs:
         with:
           name: app
           path: ./out
+
+  deploy:
+    runs-on: "ubuntu-latest"
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Get app
+        uses: actions/download-artifact@v2
+        with:
+          name: app
+          path: ./out
+
+      - name: Login via Az module
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
+
+      - name: Push Web App
+        uses: azure/webapp-deploy@v2
+        with:
+          app-name: ${{ env.APP_NAME}}
+          package: ./out
